added icon,added some comments,made small changes in appearance and in code.

--- a/app/src/main/res/layout/activity_login_activity.xml
+++ b/app/src/main/res/layout/activity_login_activity.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#DDDDDD"
     android:layout_height="match_parent"
     tools:context=".login_activity">
 
@@ -10,6 +11,7 @@
         android:id="@+id/google_signIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/black"
         android:text="Google SIGN IN"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,12 +21,12 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="429dp"
-        android:layout_height="322dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="470dp"
+        android:layout_height="256dp"
+        android:layout_marginTop="136dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/google" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
