--- a/app/src/main/res/layout/activity_play_with_bot.xml
+++ b/app/src/main/res/layout/activity_play_with_bot.xml
@@ -2,30 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/back"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".playWithBot">
 
     <ImageView
-        android:layout_width="464dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="4dp"
+        android:id="@+id/imageView6"
+        android:layout_width="405dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ttt" />
 
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView6">
 
         <TextView
             android:id="@+id/userName"
@@ -33,13 +35,14 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
             android:text="Kainat"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vs"
+            android:textColor="@color/white"
             android:textSize="20sp" />
 
         <TextView
@@ -48,11 +51,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             android:text="BOT"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="15sp" />
 
     </LinearLayout>
-
 
     <ImageView
         android:id="@+id/imageView3"
@@ -63,7 +65,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/grid" />
+        app:srcCompat="@drawable/grid_white" />
 
     <LinearLayout
         android:layout_width="314dp"
